pil2-proofman/pil2-stark/src/api/starks_api.hpp

    
    // SetupCtx
    // ========================================================================================
    uint64_t n_hints_by_name(void *p_expression_bin, char *hintName);
    void get_hint_ids_by_name(void *p_expression_bin, uint64_t *hintIds, char *hintName);
    // Stark Info
    // ========================================================================================
    void *stark_info_new(char* filename, bool recursive_final, bool recursive, bool verify_constraints, bool verify, bool gpu, bool preallocate);
    uint64_t get_proof_size(void *pStarkInfo);
    uint64_t get_proof_pinned_size(void *pStarkInfo);
    uint32_t register_host_memory(void *ptr, uint64_t size);
    void unregister_host_memory(void *ptr);
    void set_memory_expressions(void *pStarkInfo, uint64_t nTmp1, uint64_t nTmp3);
    uint64_t get_map_total_n(void *pStarkInfo);
    uint64_t get_map_total_n_custom_commits_fixed(void *pStarkInfo);
    uint64_t get_map_total_n_contributions(void *pStarkInfo);
    uint64_t get_tree_size(void *pStarkInfo);
    void stark_info_free(void *pStarkInfo);
    // Const Pols
    // ========================================================================================
    void init_gpu_setup(uint64_t maxBitsExt);
    void pack_const_pols(void *pStarkinfo, void *pConstPols, char *constFile);
    void tile_const_pols(void *pStarkInfo, void *pConstPols, char *constFile, void *pConstTree, char *constTreeFile, void *unified_buffer_gpu);
    void prepare_blocks(uint64_t* pol, uint64_t N, uint64_t nCols, void *unified_buffer_gpu);
    bool load_const_tree(void *pStarkInfo, void *pConstTree, char *treeFilename, uint64_t constTreeSize, char *verkeyFilename);
    void load_const_pols(void *pConstPols, char *constFilename, uint64_t constSize);
    uint64_t get_const_tree_size(void *pStarkInfo);
    uint64_t get_const_size(void *pStarkInfo);
    uint64_t calculate_words_per_row(void *pStarkinfo, char *constPolsPath);
    void calculate_const_tree(void *pStarkInfo, void *pConstPolsAddress, void *pConstTree, void *unified_buffer_gpu);
    void calculate_const_tree_bn128(void *pStarkInfo, void *pConstPolsAddress, void *pConstTree);
    void write_const_tree(void *pStarkInfo, void *pConstTreeAddress, char *treeFilename);
    void write_const_tree_bn128(void *pStarkInfo, void *pConstTreeAddress, char *treeFilename);
    bool verify_root_bn128_from_tree(char *treeFilename, char *expectedRoot);
    // Expressions Bin
    // ========================================================================================
    void *expressions_bin_new(char *filename, bool global, bool verifier);
    uint64_t get_max_n_tmp1(void *pExpressionsBin);
    uint64_t get_max_n_tmp3(void *pExpressionsBin);
    uint64_t get_max_args(void *pExpressionsBin);
    uint64_t get_max_ops(void *pExpressionsBin);
    uint64_t get_operations_quotient(void *pExpressionsBin, void *pStarkInfo);
    void expressions_bin_free(void *pExpressionsBin);
    // Hints
    // ========================================================================================
    void get_hint_field(void *pSetupCtx, uint64_t airgroupId, uint64_t airId, void *stepsParams, void *hintFieldValues, uint64_t hintId, char *hintFieldName, void *hintOptions, void *d_buffers_, uint64_t streamId, bool constant);
    uint64_t get_hint_field_values(void *pSetupCtx, uint64_t hintId, char *hintFieldName);
    void get_hint_field_sizes(void *pSetupCtx, void *hintFieldValues, uint64_t hintId, char *hintFieldName, void *hintOptions);
    void mul_hint_fields(void *pSetupCtx, void *stepsParams, uint64_t nHints, uint64_t *hintId, char **hintFieldNameDest, char **hintFieldName1, char **hintFieldName2, void **hintOptions1, void **hintOptions2);
    void acc_hint_field(void *pSetupCtx, void *stepsParams, uint64_t hintId, char *hintFieldNameDest, char *hintFieldNameAirgroupVal, char *hintFieldName, bool add);
    void acc_mul_hint_fields(void *pSetupCtx, void *stepsParams, uint64_t hintId, char *hintFieldNameDest, char *hintFieldNameAirgroupVal, char *hintFieldName1, char *hintFieldName2, void *hintOptions1, void *hintOptions2, bool add);
    uint64_t update_airgroupvalue(void *pSetupCtx, void *stepsParams, uint64_t hintId, char *hintFieldNameAirgroupVal, char *hintFieldName1, char *hintFieldName2, void *hintOptions1, void *hintOptions2, bool add);
    uint64_t set_hint_field(void *pSetupCtx, void *stepsParams, void *values, uint64_t hintId, char *hintFieldName);
    uint64_t get_hint_id(void *pSetupCtx, uint64_t hintId, char *hintFieldName);
    // Starks
    // ========================================================================================
    void calculate_impols_expressions(void *pSetupCtx, uint64_t step, void* stepsParams);
    void calculate_witness_expr(void *pSetupCtx, void * stepsParams);
    
    uint64_t custom_commit_size(void *pSetup, uint64_t commitId);
    void load_custom_commit(void *pSetup, uint64_t commitId, void *buffer, char *customCommitFile);
    void write_custom_commit(void *root,  uint64_t arity, uint64_t nBits, uint64_t nBitsExt, uint64_t nCols, void *d_buffers_, void *buffer, char *bufferFile);
    uint64_t commit_witness(void *pSetupCtx, void *params, uint64_t instanceId, uint64_t airgroupId, uint64_t airId, void *root, void *d_buffers);
    // Constraints
    // =================================================================================
    uint64_t get_n_constraints(void *pSetupCtx);
    void get_constraints_lines_sizes(void *pSetupCtx, uint64_t *constraintsLinesSizes);
    void get_constraints_lines(void *pSetupCtx, uint8_t **constraintsLines);
    uint64_t initialize_instance(void *pSetupCtx_, uint64_t airgroupId, uint64_t airId, uint64_t instanceId, void* params_, void *d_buffers_);
    void calculate_trace_instance(void *pSetupCtx, uint64_t airgroupId, uint64_t airId, void *stepsParams, void *d_buffers, uint64_t streamId);
    void verify_constraints(void *pSetupCtx, uint64_t airgroupId, uint64_t airId, void *stepsParams, void *constraintsInfo, void *d_buffers, uint64_t streamId);
    // Global constraints
    // =================================================================================
    uint64_t get_n_global_constraints(void *p_globalinfo_bin);
    void get_global_constraints_lines_sizes(void *p_globalinfo_bin, uint64_t *constraintsLinesSizes);
    void get_global_constraints_lines(void *p_globalinfo_bin, uint8_t **constraintsLines);