pil2-proofman/provers/starks-lib-c/bindings_starks.rs

// FFI bindings for the pil2-stark C++ library
// These functions use C linkage (extern "C") so they have consistent names across platforms

#[allow(dead_code)]
extern "C" {
    // SetupCtx
    // ========================================================================================
    pub fn n_hints_by_name(
        p_expression_bin: *mut ::std::os::raw::c_void, 
        hintName: *mut ::std::os::raw::c_char
    ) -> u64;
    
    pub fn get_hint_ids_by_name(
        p_expression_bin: *mut ::std::os::raw::c_void,
        hintIds: *mut u64,
        hintName: *mut ::std::os::raw::c_char,
    );

    // Stark Info
    // ========================================================================================
    pub fn stark_info_new(
        filename: *mut ::std::os::raw::c_char,
        recursive_final: bool,
        recursive: bool,
        verify_constraints: bool,
        verify: bool,
        gpu: bool,
        preallocate: bool,
    ) -> *mut ::std::os::raw::c_void;
    
    pub fn get_proof_size(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;

    pub fn get_proof_pinned_size(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;

    pub fn register_host_memory(ptr: *mut ::std::os::raw::c_void, size: u64) -> u32;

    pub fn unregister_host_memory(ptr: *mut ::std::os::raw::c_void);
    
    pub fn set_memory_expressions(pStarkInfo: *mut ::std::os::raw::c_void, nTmp1: u64, nTmp3: u64);
    
    pub fn get_map_total_n(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;
        
    pub fn get_map_total_n_contributions(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_map_total_n_custom_commits_fixed(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_tree_size(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn stark_info_free(pStarkInfo: *mut ::std::os::raw::c_void);

    // Const Pols
    // ========================================================================================
    pub fn load_const_tree(
        pStarkInfo: *mut ::std::os::raw::c_void,
        pConstTree: *mut ::std::os::raw::c_void,
        treeFilename: *mut ::std::os::raw::c_char,
        constTreeSize: u64,
        verkeyFilename: *mut ::std::os::raw::c_char,
    ) -> bool;
    
    pub fn load_const_pols(
        pConstPols: *mut ::std::os::raw::c_void,
        constFilename: *mut ::std::os::raw::c_char,
        constSize: u64,
    );
    
    pub fn get_const_tree_size(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_const_size(pStarkInfo: *mut ::std::os::raw::c_void) -> u64;

    pub fn calculate_words_per_row(
        pStarkinfo: *mut ::std::os::raw::c_void,
        constPolsPath: *mut ::std::os::raw::c_char,
    ) -> u64;

    pub fn init_gpu_setup(maxBitsExt: u64);

    pub fn pack_const_pols(
        pStarkinfo: *mut ::std::os::raw::c_void,
        pConstPols: *mut ::std::os::raw::c_void,
        constFile: *mut ::std::os::raw::c_char,
    );

    pub fn tile_const_pols(
        pStarkInfo: *mut ::std::os::raw::c_void,
        pConstPols: *mut ::std::os::raw::c_void,
        constFile: *mut ::std::os::raw::c_char,
        pConstTree: *mut ::std::os::raw::c_void,
        constTreeFile: *mut ::std::os::raw::c_char,
        unified_buffer_gpu: *mut ::std::os::raw::c_void,
    ); 

    pub fn prepare_blocks(pol: *mut u64, N: u64, nCols: u64, unified_buffer_gpu: *mut ::std::os::raw::c_void);

    pub fn calculate_const_tree(
        pStarkInfo: *mut ::std::os::raw::c_void,
        pConstPolsAddress: *mut ::std::os::raw::c_void,
        pConstTree: *mut ::std::os::raw::c_void,
        unified_buffer_gpu: *mut ::std::os::raw::c_void,
    );

    pub fn calculate_const_tree_bn128(
        pStarkInfo: *mut ::std::os::raw::c_void,
        pConstPolsAddress: *mut ::std::os::raw::c_void,
        pConstTree: *mut ::std::os::raw::c_void,
    );
    
    pub fn write_const_tree(
        pStarkInfo: *mut ::std::os::raw::c_void,
        pConstTreeAddress: *mut ::std::os::raw::c_void,
        treeFilename: *mut ::std::os::raw::c_char,
    );

    pub fn write_const_tree_bn128(
        pStarkInfo: *mut ::std::os::raw::c_void,
        pConstTreeAddress: *mut ::std::os::raw::c_void,
        treeFilename: *mut ::std::os::raw::c_char,
    );

    pub fn verify_root_bn128_from_tree(
        treeFilename: *mut ::std::os::raw::c_char,
        expectedRoot: *mut ::std::os::raw::c_char,
    ) -> bool;

    // Expressions Bin
    // ========================================================================================
    pub fn expressions_bin_new(
        filename: *mut ::std::os::raw::c_char,
        global: bool,
        verifier: bool,
    ) -> *mut ::std::os::raw::c_void;
    
    pub fn get_max_n_tmp1(pExpressionsBin: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_max_n_tmp3(pExpressionsBin: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_max_args(pExpressionsBin: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_max_ops(pExpressionsBin: *mut ::std::os::raw::c_void) -> u64;

    pub fn get_operations_quotient(pExpressionsBin: *mut ::std::os::raw::c_void, pStarkInfo: *mut ::std::os::raw::c_void) -> u64;

    pub fn expressions_bin_free(pExpressionsBin: *mut ::std::os::raw::c_void);

    // Hints
    // ========================================================================================
    pub fn get_hint_field(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        stepsParams: *mut ::std::os::raw::c_void,
        hintFieldValues: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
        hintOptions: *mut ::std::os::raw::c_void,
        d_buffers: *mut ::std::os::raw::c_void,
        streamId: u64,
        constant: bool,
    );
    
    pub fn get_hint_field_values(
        pSetupCtx: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
    ) -> u64;
    
    pub fn get_hint_field_sizes(
        pSetupCtx: *mut ::std::os::raw::c_void,
        hintFieldValues: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
        hintOptions: *mut ::std::os::raw::c_void,
    );
    
    pub fn mul_hint_fields(
        pSetupCtx: *mut ::std::os::raw::c_void,
        stepsParams: *mut ::std::os::raw::c_void,
        nHints: u64,
        hintId: *mut u64,
        hintFieldNameDest: *mut *mut ::std::os::raw::c_char,
        hintFieldName1: *mut *mut ::std::os::raw::c_char,
        hintFieldName2: *mut *mut ::std::os::raw::c_char,
        hintOptions1: *mut *mut ::std::os::raw::c_void,
        hintOptions2: *mut *mut ::std::os::raw::c_void,
    );
    
    pub fn acc_hint_field(
        pSetupCtx: *mut ::std::os::raw::c_void,
        stepsParams: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldNameDest: *mut ::std::os::raw::c_char,
        hintFieldNameAirgroupVal: *mut ::std::os::raw::c_char,
        hintFieldName: *mut ::std::os::raw::c_char,
        add: bool,
    );
    
    pub fn acc_mul_hint_fields(
        pSetupCtx: *mut ::std::os::raw::c_void,
        stepsParams: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldNameDest: *mut ::std::os::raw::c_char,
        hintFieldNameAirgroupVal: *mut ::std::os::raw::c_char,
        hintFieldName1: *mut ::std::os::raw::c_char,
        hintFieldName2: *mut ::std::os::raw::c_char,
        hintOptions1: *mut ::std::os::raw::c_void,
        hintOptions2: *mut ::std::os::raw::c_void,
        add: bool,
    );
    
    pub fn update_airgroupvalue(
        pSetupCtx: *mut ::std::os::raw::c_void,
        stepsParams: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldNameAirgroupVal: *mut ::std::os::raw::c_char,
        hintFieldName1: *mut ::std::os::raw::c_char,
        hintFieldName2: *mut ::std::os::raw::c_char,
        hintOptions1: *mut ::std::os::raw::c_void,
        hintOptions2: *mut ::std::os::raw::c_void,
        add: bool,
    ) -> u64;
    
    pub fn set_hint_field(
        pSetupCtx: *mut ::std::os::raw::c_void,
        stepsParams: *mut ::std::os::raw::c_void,
        values: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
    ) -> u64;
    
    pub fn get_hint_id(
        pSetupCtx: *mut ::std::os::raw::c_void,
        hintId: u64,
        hintFieldName: *mut ::std::os::raw::c_char,
    ) -> u64;

    // Calculate impols expressions
    // ========================================================================================
    pub fn calculate_impols_expressions(
        pSetupCtx: *mut ::std::os::raw::c_void,
        step: u64,
        stepsParams: *mut ::std::os::raw::c_void,
    );

    pub fn calculate_witness_expr(
        pSetupCtx: *mut ::std::os::raw::c_void,
        stepsParams: *mut ::std::os::raw::c_void,
    );

    // Custom Commits
    // ========================================================================================
    pub fn custom_commit_size(pSetup: *mut ::std::os::raw::c_void, commitId: u64) -> u64;
    
    pub fn load_custom_commit(
        pSetup: *mut ::std::os::raw::c_void,
        commitId: u64,
        buffer: *mut ::std::os::raw::c_void,
        customCommitFile: *mut ::std::os::raw::c_char,
    );
    
    pub fn write_custom_commit(
        root: *mut ::std::os::raw::c_void,
        arity: u64,
        nBits: u64,
        nBitsExt: u64,
        nCols: u64,
        d_buffers: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_void,
        bufferFile: *mut ::std::os::raw::c_char,
    );

    // Witness Commit
    // ========================================================================================
    pub fn commit_witness(
        pSetupCtx: *mut ::std::os::raw::c_void,
        params: *mut ::std::os::raw::c_void,
        instanceId: u64,
        airgroupId: u64,
        airId: u64,
        root: *mut ::std::os::raw::c_void,
        d_buffers: *mut ::std::os::raw::c_void,
    ) -> u64;

    // Constraints Verification
    // ========================================================================================
    pub fn get_n_constraints(pSetupCtx: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_constraints_lines_sizes(pSetupCtx: *mut ::std::os::raw::c_void, constraintsLinesSizes: *mut u64);
    
    pub fn get_constraints_lines(pSetupCtx: *mut ::std::os::raw::c_void, constraintsLines: *mut *mut u8);

    pub fn initialize_instance(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        instanceId: u64,
        stepsParams: *mut ::std::os::raw::c_void,
        d_buffers: *mut ::std::os::raw::c_void,
    ) -> u64;

    pub fn calculate_trace_instance(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        stepsParams: *mut ::std::os::raw::c_void,
        d_buffers: *mut ::std::os::raw::c_void,
        streamId: u64,
    );

    pub fn verify_constraints(
        pSetupCtx: *mut ::std::os::raw::c_void,
        airgroupId: u64,
        airId: u64,
        stepsParams: *mut ::std::os::raw::c_void,
        constraintsInfo: *mut ::std::os::raw::c_void,
        d_buffers: *mut ::std::os::raw::c_void,
        streamId: u64,
    );

    // Global Constraints
    // ========================================================================================
    pub fn get_n_global_constraints(p_globalinfo_bin: *mut ::std::os::raw::c_void) -> u64;
    
    pub fn get_global_constraints_lines_sizes(
        p_globalinfo_bin: *mut ::std::os::raw::c_void,
        constraintsLinesSizes: *mut u64,
    );
    
    pub fn get_global_constraints_lines(p_globalinfo_bin: *mut ::std::os::raw::c_void, constraintsLines: *mut *mut u8);
